quote content updated

--- a/features.html
+++ b/features.html
@@ -172,7 +172,7 @@
 </head>
 
 <body>
-    <section class="container">
+    <!-- <section class="container">
         <div class="section-header-text-box">
             <h2 class="secondary-headline">SLACK VS. EMAIL</h2>
             <h1 class="header-headline">An easier, more organized way to work</h1>
@@ -180,7 +180,7 @@
             <a class="btn-slack btn-primary" href="#">Try Slack</a>
             <a class="btn-slack btn-secondary" href="#">Contact Sales</a>
         </div>
-    </section>
+    </section> -->
 
     <section class="container-fluid">
         <div class="container">
@@ -203,10 +203,23 @@
         </div>
     </section>
 
+    
+<!-- 
+    <section class="container-fluid">
+        <div class="section-footer-text-box">
+            <h3 class="bottom-headline">Meet the alternative to email</h3>
+            <a class="btn-slack btn-bottom-primary" href="#">Try Slack</a>
+            <a class="btn-slack btn-bottom-secondary" href="#">Contact Sales</a>
+        </div>
+    </section> -->
+
+
     <section class="container">
         <div class="quote-content">
-            <div><a></a></div>
-            <p>"You can't have a good conversation over email-it's not quick enough. Coming together in Slack channels allows us to easily discuss day-to-day</p>
+            <div>
+                <img src="https://a.slack-edge.com/80588/marketing/img/logos/company/_color/lyft-logo.png" srcset="https://a.slack-edge.com/80588/marketing/img/logos/company/_color/lyft-logo.png 1x, https://a.slack-edge.com/80588/marketing/img/logos/company/_color/lyft-logo@2x.png 2x" alt="Lyft logo">
+            </div>
+            <p>"You can't have a good conversation over email-it's not quick enough. Coming together in Slack channels allows us to easily discuss day-to-day management topics. That's invaluable</p>
             <div>
                 <p>Benjamin Sternsmith</p>
                 <p>Area Vice President of Sales, Lyft Business</p>
@@ -215,15 +228,19 @@
         </div>
     </section>
 
-
-    <section class="container-fluid">
-        <div class="section-footer-text-box">
-            <h3 class="bottom-headline">Meet the alternative to email</h3>
-            <a class="btn-slack btn-bottom-primary" href="#">Try Slack</a>
-            <a class="btn-slack btn-bottom-secondary" href="#">Contact Sales</a>
+    <section class="container">
+        <div class="quote-content">
+            <div>
+                <img src="https://a.slack-edge.com/c6d68/marketing/img/stories/cole-haan/cole-haan-logo.jpg" srcset="https://a.slack-edge.com/c6d68/marketing/img/stories/cole-haan/cole-haan-logo.jpg 1x, https://a.slack-edge.com/c6d68/marketing/img/stories/cole-haan/cole-haan-logo@2x.jpg 2x" alt="Cole Haan logo">
+            </div>
+            <p>“I can drop into any channel and see what’s happening. I don’t have to interrupt anyone or call a meeting to get updated. It’s all happening in real time, which means we’re all just that much more efficient.”</p>
+            <div>
+                <p>David Maddocks</p>
+                <p>CMO, Cole Haan</p>
+                <a>Read Story</a>
+            </div>
         </div>
     </section>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
